--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
       href="%PUBLIC_URL%/SoonKitchenLogo.ico"
       type="image/x-icon"
     />
+    <!-- Swiper CSS -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
